--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -258,7 +258,7 @@ select::-ms-expand {
 
 .add-minus-quantity {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
 }
 
