--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -215,10 +215,15 @@ select::-ms-expand {
 .items-info {
   width: 100%;
   height: 11rem;
-  /* background-color: lavender; */
+  background-color: rgb(246, 246, 248);
   margin: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.delete-info button{
+  display: flex;
+  align-items: center;
 }
 
 .items-info .product-img img {
