--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -32,7 +32,7 @@ i {
 }
 
 body {
-  width: 90%;
+  width: 100%;
   height: 100vh;
   margin: auto;
 }
@@ -97,7 +97,11 @@ header {
   align-items: center;
   color: var(--main-color);
 }
-
+.main-cart-section{
+  width: 90%;
+  margin: 0 auto;
+  padding: 0px 0px 50px 0px;
+}
 .main-cart-section h1 {
   font-style: normal;
   font-weight: bold;
@@ -129,7 +133,7 @@ select {
   outline:0;
   box-shadow:none;
   border:0!important;
-  background: #5c6664;
+  background: #a0bdb7;
   background-image: none;
   flex: 1;
   padding: 0 .5em;
@@ -178,7 +182,10 @@ select::-ms-expand {
   cursor: pointer;
   letter-spacing: 1px;
 }
-
+.add-to-cart {
+  display: flex;
+  justify-content: end;
+}
 .add-to-cart button:hover {
   background-color: rgb(209, 61, 61);
 }
